# Recommender-System

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
recommender_system/: __init__.py  dataset.py  features.py  main.py  plots.py
recommender_system/modeling/: predict.py  train.py
